fix mobile view on overflow

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,7 +1,15 @@
 @import "bootstrap/dist/css/bootstrap.min.css";
 
-body {
+html, body {
     background-color: rgb(248, 248, 248);
+    height: 100%;
+    margin: 0;
+    overflow-x: hidden;
+}
+
+.col {
+    overflow-x: auto;
+    padding: 25px !important;
 }
 
 .feather {
